--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /BookStore/.vs/BookStore
+/BookStore/BookStore/obj
+/BookStore/BookStore/bin/Debug/netcoreapp3.1
